kubernetes/k3s-01/workloads/pihole/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:2026.09.0@sha256:5b9c8cf51de7d6d3f2240dbe72baf5f06e1fd39cb4d77a99fab4fa13e23bd1be
          # startupProbe:
          #   httpGet:
          #     path: /admin/api.php?status
          #     port: 80
          #   failureThreshold: 5
          #   periodSeconds: 20
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: pihole
              mountPath: /etc/pihole
              subPath: etc-pihole/
            - name: pihole
              mountPath: /etc/dnsmasq.d
              subPath: etc-dnsmasq.d/
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
